styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

@layer base {
  body {
    @apply bg-[#ecf0f3] text-[#1f2937] dark:bg-[#0c121c] dark:text-[#ecf0f3] tracking-wide scroll-smooth
  }

  h1, h2, h3, h4, h5, h6 {
    @apply font-bold
  }

  h1 {
    @apply text-4xl sm:text-5xl md:text-6xl
  }
  
  h2 {
    @apply text-3xl sm:text-4xl
  }

  li {
    @apply cursor-pointer
  }

  button {
    @apply shadow-xl shadow-gray-300 dark:shadow-none rounded-lg uppercase 
  }
}

